tests/regression/baselines/test07_type_conflicts.expected
ERROR
TypeError: Value is required to have type float here:
// Test 7: Type conflicts that should error
// This should cause a type error
let bad_add = fun x -> x + x +. x;
                       ^~~~~       
However, that value may have type int originating here:
// Test 7: Type conflicts that should error
// This should cause a type error
let bad_add = fun x -> x + x +. x;
                       ^~~~~       
